# FFmpeg4Android

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mabeijianxi/jianxiffmpegcmd/: MainActivity.java
build_script/: jianxi_ffmpeg_arm64_v8a_build.sh  jianxi_ffmpeg_arm64_v8a_build_more.sh  jianxi_ffmpeg_arm_build.sh  jianxi_ffmpeg_arm_build_more.sh  jianxi_ffmpeg_arm_v7a_build.sh  jianxi_ffmpeg_x86_64_build.sh
build_script/fdk-aac-0.1.5/: fdk_aac_arm64_v8a_build.sh  fdk_aac_x86_64_build.sh  fdk_aac_x86_build.sh
build_script/libx264/: x264_arm64_v8a_build.sh  x264_arm_build.sh  x264_mips_build.sh  x264_x86_64_build.sh  x264_x86_build.sh
ffmpeg-3.2.5/: jianxi_ffmpeg_arm64_v8a_build_more.sh  jianxi_ffmpeg_arm_build.sh  jianxi_ffmpeg_arm_build_more.sh  jianxi_ffmpeg_arm_v7a_build_more.sh  jianxi_ffmpeg_x86_64_build_more.sh  jianxi_ffmpeg_x86_build.sh  jianxi_ffmpeg_x86_build_more.sh  mycopy.sh
ffmpeg-3.2.5/fdk-aac-0.1.5/: fdk_aac_arm_build.sh  fdk_aac_mips_build.sh
ffmpeg-3.2.5/libx264/: x264_arm64_v8a_build.sh  x264_arm_build.sh  x264_mips_build.sh  x264_x86_64_build.sh  x264_x86_build.sh
